--- a/app/views/layouts/tabs/tab_links/_friends_active.html.erb
+++ b/app/views/layouts/tabs/tab_links/_friends_active.html.erb
@@ -1,4 +1,4 @@
-<%= link_to connection_path(current_user), 'aria-selected' => true  do %>
+<%= link_to user_connections_path(current_user), 'aria-selected' => true  do %>
    <i class="fa-solid fa-user-group"></i> Feat Friends
    <%= render "layouts/tabs/span_indicator" %>
 <% end%>
