--- a/app/views/layouts/tabs/tab_links/_friends_inactive.html.erb
+++ b/app/views/layouts/tabs/tab_links/_friends_inactive.html.erb
@@ -1,3 +1,3 @@
-<%= link_to connection_path(current_user)  do %>
+<%= link_to user_connections_path(current_user)  do %>
    <i class="fa-solid fa-user-group"></i> Feat Friends
 <% end%>
