footer landing page

--- a/app/views/static_pages/new.html.erb
+++ b/app/views/static_pages/new.html.erb
@@ -5,5 +5,6 @@
       <%= render 'features_lp'%>
       <%= render 'sports_lp'%>
       <%= render 'convinced_lp'%>
+      <%= render 'footer_lp' %>
    </div>
 <%end%>
