--- a/app/assets/stylesheets/root/root.scss
+++ b/app/assets/stylesheets/root/root.scss
@@ -90,6 +90,11 @@ body {
 a{
    font-family: var(--medium-font);
    font-size: var(--normal);
+   text-decoration: none;
+
+   &:hover{
+      color: rgb(var(--white));
+   }
 }
 
 
