--- a/app/views/static_pages/_hero_lp.html.erb
+++ b/app/views/static_pages/_hero_lp.html.erb
@@ -3,7 +3,7 @@
       <div class="hero-text">
          <h1> Découvrez FitFeat <br> Redécouvrez le sport </h1>
          <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis no </p> 
-            <%= button_to 'Se connecter', new_user_session_path, class: 'button primary'%>
+            <%= link_to 'Se connecter', new_user_session_path, class: 'button primary'%>
       </div>
       <div class="linear-layer" > </div>
       <div class="hero-svg">
