--- a/app/assets/stylesheets/pages/landing-page/convinced.scss
+++ b/app/assets/stylesheets/pages/landing-page/convinced.scss
@@ -8,11 +8,28 @@
    background-repeat: no-repeat !important;
    background-size: cover !important;
    background-position: 50% 75% !important;
-   gap: 0px !important;
+   
    border-radius: 0px !important;
+
+   .button-row{
+      padding-left: 50px;
+      z-index: 1;
+   }
+
+
+   .linear-background{
+      position: absolute;
+      border-radius: 10px;
+      z-index: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(270.09deg, rgba(79, 79, 79, 0) 0.08%, rgba(15, 15, 15, 0.82) 39.62%, rgba(15, 15, 15, 0.87) 47.2%, rgba(4, 4, 4, 0.87) 55.08%, rgba(2, 2, 2, 0.88) 71.19%, rgba(0, 0, 0, 0.69) 99.35%) !important;
+   }
 
    .element-container{
       gap: 8px !important;
+      padding-left: 50px;
+      z-index: 1;
    }
 
    h1{
@@ -25,22 +42,6 @@
       max-width: 549px !important;
    }
   
-   .linear-background{
-      background: linear-gradient(270.09deg, rgba(79, 79, 79, 0) 0.08%, rgba(15, 15, 15, 0.82) 39.62%, rgba(15, 15, 15, 0.87) 47.2%, rgba(4, 4, 4, 0.87) 55.08%, rgba(2, 2, 2, 0.88) 71.19%, rgba(0, 0, 0, 0.69) 99.35%) !important;
-   }
-
-   .button-container{
-      display: flex;
-      flex-direction: row;
-      
-      .button{
-        position: relative;
-        display: flex;
-        margin-left: 10px;
-        justify-content: flex-start;
-        bottom: 30px;
-        left: 6px;
-      }
-   }
- }
+   
+}
 }
