--- a/app/views/static_pages/_sports_lp.html.erb
+++ b/app/views/static_pages/_sports_lp.html.erb
@@ -9,60 +9,59 @@
          <div class="title-underline"> </div>
       </div>
 
-   <div class="card-container">
-      <div class="card">
-         <div class="card-element">
-           <div class="background">
+   <div class="cart-contain">
+      <div class="cart">
+        
+           <div class="back">
            <div class="circle circle-futsal"></div>
            <div class="circle circle-futsal"></div>
-            <div class="card-img"> <%= image_tag "Futsal-card.png"%></div>
+            <div class="cart-img"> <%= image_tag "Futsal-card.png"%></div>
            </div> 
-            <h3 class="text-card"> Futsal </h3>
-         </div>
+            <h3 class="text-cart"> Futsal </h3>
+         
       </div>
 
-      <div class="card">
-         <div class="card-element">
-            <div class="background">
+      <div class="cart">
+        
+            <div class="back">
                <div class="circle circle-workout"></div>
                <div class="circle circle-workout"></div>
-               <div class="card-img"><%= image_tag "Gymming-card.png" %></div>
+               <div class="cart-img"><%= image_tag "Gymming-card.png" %></div>
             </div>   
-            <h3 class="text-card"> Workout </h3>
-         </div>
+            <h3 class="text-cart"> Workout </h3>
+         
       </div>
 
-      <div class="card">
-         <div class="card-element">
-            <div class="background">
+      <div class="cart">
+        
+            <div class="back">
             <div class="circle circle-running"></div> 
             <div class="circle circle-running"></div> 
-               <div class="card-img"><%= image_tag "running-card.png" %></div>
+               <div class="cart-img"><%= image_tag "running-card.png" %></div>
             </div>   
-            <h3 class="text-card"> Running </h3>
-         </div>
+            <h3 class="text-cart"> Running </h3>
+         
       </div>
 
-      <div class="card">
-         <div class="card-element">
-            <div class="background">
+      <div class="cart">
+            <div class="back">
             <div class="circle circle-climbing"></div>
             <div class="circle circle-climbing"></div>
-               <div class="card-img"> <%= image_tag "Sports-icon.png" %></div>
+               <div class="cart-img"> <%= image_tag "Sports-icon.png" %></div>
             </div>   
-            <h3 class="text-card"> Climbing</h3>
-         </div>
+            <h3 class="text-cart"> Climbing</h3>
+         
       </div>
 
-      <div class="card">
-         <div class="card-element">
-          <div class="background">
-           <div class="circle circle-tennis"></div>
-           <div class="circle circle-tennis"></div>
-            <div class="card-img"><%= image_tag "Tennis-card.png" %></div> 
+      <div class="cart">
+        
+          <div class="back">
+            <div class="circle circle-tennis"></div>
+            <div class="circle circle-tennis"></div>
+               <div class="cart-img"><%= image_tag "Tennis-card.png" %></div> 
           </div>  
-          <h3 class="text-card"> Tennis </h3>
-         </div>
+          <h3 class="text-cart"> Tennis </h3>
+        
       </div>
 
    </div>
