--- a/app/assets/stylesheets/pages/sign_up_log_in-page/log_in.scss
+++ b/app/assets/stylesheets/pages/sign_up_log_in-page/log_in.scss
@@ -26,7 +26,7 @@
       display: flex;
       flex: 4;
       flex-direction: column;
-      justify-content: center;
+      justify-content: space-around;
       align-items: center;
       width: 100%;
       height: 100%;
@@ -52,7 +52,6 @@
             display: flex;
             flex-direction: column;
             align-items: flex-start;
-            gap: 40px;
             width: 100%;
             height: 100%;
    
