--- a/app/assets/stylesheets/atoms/forms.scss
+++ b/app/assets/stylesheets/atoms/forms.scss
@@ -7,6 +7,10 @@
       margin-bottom: 0.5rem;
       font-size: 1.2rem;
 
+      span{
+         font-size: 0.8rem;
+      }
+
    }
 
    .input-wrapper{
