--- a/app/views/devise/registrations/_form_element.html.erb
+++ b/app/views/devise/registrations/_form_element.html.erb
@@ -15,10 +15,11 @@
 
             <div class ="middle-content-password">
              <div class="input">
-              <p class="input-name">Password</p>
+              <p class="input-name">Password  
                 <% if @minimum_password_length %>
-                <em>(<%= @minimum_password_length %> characters minimum)</em>
-                <% end %><br />
+                <span>(<%= @minimum_password_length %> characters minimum)</span>
+                <% end %>
+              </p>
               <div class="input-wrapper"> 
                 <%= f.password_field :password, autocomplete: "new-password", placeholder: "Rentrez votre nouveau mot de passe" %>
                 <i class="fa-solid fa-lock"></i>
