--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -9,3 +9,5 @@
 <div><%=link_to "Supprimer le compte", user_path(@user), method: :delete%></div>
 
 </div>
+
+<%= javascript_include_tag 'performances'%>
